--- a/package.json
+++ b/package.json
@@ -19,32 +19,32 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
-    "@ng-bootstrap/ng-bootstrap": "^5.1.4",
-    "bootstrap": "^4.4.1",
-    "bootstrap-icons": "^1.0.0-alpha",
+    "@ng-bootstrap/ng-bootstrap": "^5.3.1",
+    "bootstrap": "^4.6.0",
+    "bootstrap-icons": "^1.3.0",
     "rxjs": "~6.4.0",
-    "tslib": "^1.10.0",
-    "videogular2": "^7.0.1",
+    "tslib": "^1.14.1",
+    "videogular2": "^7.0.2",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1000.3",
-    "@angular/cli": "~8.3.20",
+    "@angular-devkit/build-angular": "^0.803.29",
+    "@angular/cli": "^8.3.29",
     "@angular/compiler-cli": "~8.2.14",
     "@angular/language-service": "~8.2.14",
-    "@types/core-js": "^2.5.2",
+    "@types/core-js": "^2.5.4",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
-    "codelyzer": "^5.0.0",
+    "codelyzer": "^5.2.2",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
-    "protractor": "~5.4.0",
+    "karma-jasmine-html-reporter": "^1.5.4",
+    "protractor": "^5.4.4",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
     "typescript": "~3.5.3"
